manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starai-web
  namespace: starai-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starai-web
  template:
    metadata:
      labels:
        app: starai-web
      annotations:
        conjur.org/container-mode: "sidecar"
        conjur.org/authenticator-id: "Arun-MIM"
    spec:
      serviceAccountName: starai-app-sa
      containers:
        - name: starai-web
          image: arunrana1214/starai-mongo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
          command: ["/bin/sh","-lc"]
          args:
            - >
              exec gunicorn --workers 2 --threads 4
              --bind 0.0.0.0:8443
              --certfile /tls/tls.crt --keyfile /tls/tls.key
              app:app
          volumeMounts:
            - name: starai-tls
              mountPath: /tls
              readOnly: true
            - name: conjur-access-token
              mountPath: /run/conjur
              readOnly: true
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

        - name: authenticator
          image: cyberark/conjur-authn-k8s-client
          imagePullPolicy: Always
          volumeMounts:
            - name: conjur-access-token
              mountPath: /run/conjur
            - name: jwt-token
              mountPath: /var/run/secrets/tokens

      volumes:
        - name: starai-tls
          secret:
            secretName: starai-tls
        - name: conjur-access-token
          emptyDir:
            medium: Memory
        - name: jwt-token
          projected:
            sources:
              - serviceAccountToken:
                  path: jwt
                  expirationSeconds: 6000
                  audience: https://kubernetes.default.svc
