manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starai-web
  namespace: starai-mongo
spec:
  type: ClusterIP
  selector:
    app: starai-web
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
